--- a/Libraries/ExchangeRateUpdaterCk.Application/ExchangeRateUpdaterCk.Application.csproj
+++ b/Libraries/ExchangeRateUpdaterCk.Application/ExchangeRateUpdaterCk.Application.csproj
@@ -4,7 +4,6 @@
     <TargetFramework>net6.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>disable</Nullable>
-    <RootNamespace>ExchangeRateUpdaterCk.Service</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
@@ -16,7 +15,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\ExchangeRateUpdaterCk.Data\ExchangeRateUpdaterCk.Data.csproj" />
+    <ProjectReference Include="..\ExchangeRateUpdaterCk.Infrastructure\ExchangeRateUpdaterCk.Infrastructure.csproj" />
     <ProjectReference Include="..\ExchangeRateUpdaterCk.Domain\ExchangeRateUpdaterCk.Domain.csproj" />
   </ItemGroup>
 
